# stellar-debugger

./: .c8rc.json  .eslintrc.json  .gitignore  .mocharc.json  .mocharc.stryker.json  .vscodeignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  esbuild.js  package-lock.json  package.json  stryker.conf.json  tsconfig.json  tsconfig.test.json
.devcontainer/: Dockerfile  devcontainer.json  install-komet-node.sh
.github/: pull_request_template.md
docs/: dap-cli-internal.md  dap-cli.md  interfaces.md  standalone-interfaces.md  stepping.md  trace-cli-internal.md  trace-cli.md
examples/: README.md
examples/control/: Cargo.toml
examples/control/src/: lib.rs
examples/stepper/: Cargo.toml
examples/stepper/src/: lib.rs
scripts/: capture-trace.mjs  dev.sh  make-fixtures.sh  verify-addresses.mjs  wf-control-stepping.js  wf-stop-filtering.js
src/: extension.ts
test/: backendFor.test.ts  contractBuilder.test.ts  controlStepping.test.ts  dap.test.ts  dapControlStepping.test.ts  dapMemoryVariables.test.ts  dapServer.test.ts  dapStepping.test.ts  dapVariables.test.ts  debugLoc.test.ts  die.test.ts  disassembly.test.ts  dwarf.test.ts  dwarfDebugInfo.test.ts  dwarfSourceMapper.test.ts  forms.test.ts  integration.build.test.ts  integration.node.test.ts  kometClient.test.ts  lineProgramV5.test.ts  liveBackend.test.ts  locexpr.test.ts  memoryImage.test.ts  mnemonics.test.ts  pipeline.test.ts  projectStop.test.ts  runTrace.test.ts  runtimeState.test.ts  scopeIndex.test.ts  scval.test.ts  serverCli.test.ts  stepping.test.ts  stopModel.test.ts  stops.test.ts  trace.test.ts  (+9 more)
(+83 files in other folders)
